# privacy-paymaster

./: .env.example  .gitignore  .gitmodules  .sops.yaml  CLAUDE.md  Cargo.toml  README.md  TODO  flake.nix  foundry.toml  justfile  lcov.info  package.json  report.md
.github/workflows/: test.yml
broadcast/DeployPaymaster.s.sol/11155111/: run-1776357381950.json  run-1776370576523.json  run-1778339599175.json  run-1778356012800.json
broadcast/DeployRailgun.s.sol/11155111/: run-latest.json
broadcast/DeployTornado.s.sol/11155111/: run-1776370361093.json  run-1776370819451.json  run-latest.json
broadcast/StakePaymaster.s.sol/11155111/: run-1776370322044.json  run-1776370612220.json  run-1776370703338.json  run-1776370719164.json  run-1778362504117.json  run-latest.json
config/chains/: anvil-test.toml  sepolia.toml
config/deployments/: .gitignore  sepolia.json
contracts/: PrivacyPaymaster.sol  foundry.toml  lcov.info
contracts/accounts/: BasePrivacyAccount.sol
contracts/accounts/railgun/: Globals.sol  RailgunAccount.sol
contracts/accounts/railgun/interfaces/: IRailgunSmartWallet.sol
contracts/accounts/tornadocash/: TornadoAccount.sol
contracts/interfaces/: IPrivacyAccount.sol
contracts/script/: DeployPaymaster.s.sol  DeployPrivacy.s.sol  DeployTornado.s.sol  SetupPaymaster.s.sol  StakePaymaster.s.sol
contracts/src/: PrivacyPaymaster.sol
contracts/src/accounts/: BasePrivacyAccount.sol  PrivacyPoolsAccount.sol  RailgunAccount.sol  TornadoAccount.sol
contracts/src/accounts/tornadocash/: TornadoAccount.sol
contracts/src/accounts/tornadocash/interfaces/: ITornadoInstance.sol
contracts/src/interfaces/: IEntrypoint.sol  IPrivacyProtocolsEntrypoint.sol
contracts/test/: BasePrivacyAccount.t.sol  Deploy.t.sol  PrivacyPaymaster.fork.t.sol  TornadoAccount.fork.t.sol
contracts/test/fixtures/: TornadoFixtures.sol
crates/userop_kit/: Cargo.toml
crates/userop_kit/src/: builder.rs  entry_point.rs  error.rs  lib.rs  provider.rs  railgun.rs  signable_user_operation.rs  signed_user_operation.rs  tornadocash.rs  user_operation.rs
crates/userop_kit/src/abis/: entry_point.rs  mod.rs  privacy_account.rs  railgun.rs  tornado.rs
crates/userop_kit/src/bundler/: bundler.rs  js.rs  mod.rs  pimlico.rs  rpc_client.rs
crates/userop_kit/src/snapshots/: userop_kit__signable_user_operation__tests__hash.snap.new  userop_kit__user_operation__tests__hash.snap  userop_kit__user_operation__tests__pack.snap  userop_kit__user_operation__tests__sign.snap
crates/userop_kit_ts/: Cargo.toml  lib.ts  package.json
crates/userop_kit_ts/src/: builder.rs  lib.rs  provider.rs  types.rs
docs/: architecture.md  cost.md  index.md  security.md
docs/threats/: 000-template.md  001-leftover-funds.md  002-insufficient-execution-gas.md  README.md
script/: Deploy.s.sol  DeployPaymaster.s.sol  DeployPrivacy.s.sol  DeployRailgun.s.sol  DeployTornado.s.sol  SetupPaymaster.s.sol  StakePaymaster.s.sol
script/lib/: Chains.sol  Deployments.sol
sdk/: index.ts  package.json  tsconfig.build.json
sdk/src/: builder.ts  bundlerClient.ts  privacyProtocolBuilder.ts  privacyProtocolSmartAccount.ts  tornadoBuilder.ts  tornadoBundler.ts  types.ts
sdk/test/e2e/: happyPath.test.ts
sdk/tests/: e2e.test.ts  tornadocash.test.ts  utils.ts
sdk/tests/fixtures/: anvil-state-railgun.json  anvil-state.json
secrets/: secrets.yaml
src/: PrivacyPaymaster.sol  TornadoAccount.sol  TornadoPaymaster.sol
src/accounts/: BasePrivacyAccount.sol  IPrivacyAccount.sol  PrivacyPoolsAccount.sol  RailgunAccount.sol  TornadoAccount.sol
src/accounts/tornadocash/: TornadoAccount.sol
src/interfaces/: IRailgunSmartWallet.sol  IStaticOracle.sol  ITornadoInstance.sol  IVerifier.sol
test/: BasePrivacyAccount.t.sol  Deploy.t.sol  PrivacyPaymaster.fork.t.sol  PrivacyPaymaster.t.sol  RailgunAccount.fork.t.sol  RailgunAccount.t.sol  TornadoAccount.fork.t.sol  TornadoAccount.t.sol  TornadoPaymaster.fork.t.sol
test/fixtures/: RailgunFixtures.sol  TornadoFixtures.sol  shield-railgun.json  transaction-railgun.json
test/fixtures/railgun/: README.md  paymasterAndData.json
test/fixtures/tornadocash/: README.md  config.json  shield.json  unshield.json
test/helpers/: CallReverter.sol  RevertingReceiver.sol
test/utils/: RailgunJson.sol
