[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
userop_kit = { path = "crates/userop_kit" }
alloy = { version = "1.8", default-features = false, features = [
    "serde",
    "eips",
    "signers",
    "sol-types",
    "rpc-types",
] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
wasm-bindgen = "0.2"
tsify = "0.5"
gloo-timers = { version = "0.3", features = ["futures"] }
getrandom = { version = "0.2", features = ["js"] }
tokio = { version = "1", features = ["time"] }
