[package]
name = "userop_kit"
version = "0.1.0"
edition = "2024"

[lib]
name = "userop_kit"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
alloy-primitives = { version = "1.5", features = ["serde"] }
alloy-rpc-types = "1.5"
alloy-serde = "1.5"
alloy-signer = "1.5"
alloy-sol-macro = "1.5"
alloy-sol-types = "1.5"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
tsify = "0.5"
gloo-timers = { version = "0.3", features = ["futures"] }
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
alloy-signer-local = "1.5"
insta = "1.47.2"
tokio = { version = "1", features = ["full"] }
