[package]
name = "userop_kit"
version = "0.1.0"
edition = "2024"

[lib]
name = "userop_kit"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
alloy = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
tsify = { workspace = true }
gloo-timers = { workspace = true }
getrandom = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }

[dev-dependencies]
insta = "1.47.2"
tokio = { workspace = true, features = ["full"] }
alloy = { workspace = true, features = ["signer-local"] }
