[package]
name = "userop_kit"
version = "0.1.0"
edition = "2024"

[lib]
name = "userop_kit"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = []
js = ["dep:tsify", "dep:wasm-bindgen", "dep:wasm-bindgen-futures"]

[dependencies]
alloy = { workspace = true }
alloy-sol-types = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tsify = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
getrandom = { workspace = true }
gloo-timers = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
insta = "1.47.2"
tokio = { workspace = true, features = ["full"] }
alloy = { workspace = true, features = ["signer-local"] }

[build-dependencies]
cfg_aliases = { workspace = true }
