[package]
name = "userop_kit_ts"
version = "0.1.0"
edition = "2024"

[lib]
name = "userop_kit_ts"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
alloy-primitives = { version = "1.5.7", features = ["serde"] }
alloy-provider = "1.8.3"
alloy-rpc-client = "1.8.3"
userop_kit = { workspace = true }
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.68"
tsify = "0.5.6"
getrandom = { version = "0.2", features = ["js"] }
